--- a/src/layout/Experience/Experience.css
+++ b/src/layout/Experience/Experience.css
@@ -1,13 +1,5 @@
-.experiences.hidden {
+.experiences {
   border: 1px solid var(--border-light);
   padding: 1rem;
   border-radius: 0.5rem;
-  opacity: 0;
-  transform: translate(0, 2.5rem);
-  transition: all 0.7s ease-in-out;
-}
-
-.experiences.show {
-  opacity: 1;
-  transform: translate(0, 0);
 }
